# xrayview

./: .gitattributes  .gitignore  AGENTS.md  AGENT_MIDDLEWARE_PLAN.md  BACKEND_COMMENTING_PLAN.md  BENCHMARKS.md  BUGFIX_ROADMAP.md  CHANGELOG.md  FRONTEND_MIGRATION_PLAN.md  GO_BACKEND_MIGRATION_PLAN.md  GO_BACKEND_PHASE0_REPOSITORY_BEHAVIOR_INVENTORY.md  GO_BACKEND_PHASE10_IMPLEMENT_GO_STUDY_REGISTRY_AND_OPEN_STUDY.md  GO_BACKEND_PHASE11_PROTOTYPE_GO_DICOM_METADATA_READER.md  GO_BACKEND_PHASE12_DECIDE_DICOM_DECODE_STRATEGY.md  GO_BACKEND_PHASE13_BUILD_TEMPORARY_RUST_DECODE_HELPER.md  GO_BACKEND_PHASE14_IMPLEMENT_GO_PREVIEW_IMAGE_MODEL.md  GO_BACKEND_PHASE15_PORT_WINDOWING_LOGIC_TO_GO.md  GO_BACKEND_PHASE16_PORT_BASE_RENDER_PIPELINE_TO_GO.md  GO_BACKEND_PHASE17_CUT_RENDER_STUDY_TO_GO.md  GO_BACKEND_PHASE18_PORT_GRAYSCALE_PROCESSING_CONTROLS.md  GO_BACKEND_PHASE19_PORT_PALETTE_AND_COMPARE_LOGIC.md  GO_BACKEND_PHASE1_PARITY_FIXTURE_SUITE.md  GO_BACKEND_PHASE20_PORT_PROCESS_JOB_ORCHESTRATION_TO_GO.md  GO_BACKEND_PHASE21_PORT_MEMORY_CACHE_TO_GO.md  GO_BACKEND_PHASE22_PORT_DISK_CACHE_PATH_POLICY_TO_GO.md  GO_BACKEND_PHASE23_PORT_JOB_REGISTRY_TO_GO.md  GO_BACKEND_PHASE24_PORT_RECENT_STUDY_PERSISTENCE_TO_GO.md  GO_BACKEND_PHASE25_PORT_LINE_MEASUREMENT_LOGIC_TO_GO.md  GO_BACKEND_PHASE26_PORT_ANNOTATION_SUGGESTION_MAPPING_TO_GO.md  GO_BACKEND_PHASE27_PORT_TOOTH_ANALYSIS_PRIMITIVES_TO_GO.md  GO_BACKEND_PHASE28_IMPLEMENT_GO_ANALYZE_JOB.md  GO_BACKEND_PHASE2_BACKEND_CONTRACT_FREEZE.md  GO_BACKEND_PHASE30_ADD_TEMPORARY_RUST_EXPORT_HELPER_IF_NEEDED.md  GO_BACKEND_PHASE31_CUT_PROCESS_STUDY_FULLY_TO_GO.md  GO_BACKEND_PHASE32_CUT_MEASURE_LINE_ANNOTATION_TO_GO.md  GO_BACKEND_PHASE33_CUT_OPEN_STUDY_TO_GO_IN_LIVE_DESKTOP_FLOW.md  GO_BACKEND_PHASE34_CUT_ANALYZE_STUDY_TO_GO_IN_LIVE_DESKTOP_FLOW.md  GO_BACKEND_PHASE35_MOVE_CLI_OWNERSHIP_TO_GO.md  GO_BACKEND_PHASE36_REMOVE_RUST_CONTRACT_GENERATION_AND_LEGACY_FRONTEND_BUILD_DEPENDENCY.md  GO_BACKEND_PHASE37_INTRODUCE_GO_FIRST_PACKAGING_FLOW_UNDER_TAURI.md  (+25 more)
backend/: Cargo.toml  README.md  contracts.go  go.mod  service.go
backend-rust/: Cargo.toml  README.md
backend-rust/scripts/: compare-preview.sh
backend-rust/src/: compare.rs  main.rs  palette.rs  preview.rs  processing.rs  save.rs
backend-rust/tests/: preview_correctness.rs
backend/cmd/xrayview-cli/: legacy_cli.go  main.go  main_test.go
backend/cmd/xrayviewd/: main.go
backend/internal/analysis/: analysis.go  analysis_debugdump_test.go  analysis_test.go  closeup_boundary.go  gap_trace.go  gap_trace_test.go  outline_test.go  overlay.go  overlay_test.go
backend/internal/annotations/: measurement.go  measurement_test.go  suggestions.go  suggestions_test.go
backend/internal/app/: app.go  app_test.go  service.go
backend/internal/bufpool/: bufpool.go
backend/internal/cache/: memory.go  memory_analyze_test.go  memory_test.go  store.go  store_test.go
backend/src/: compare.rs  error.rs  lib.rs  main.rs  palette.rs  preview.rs  processing.rs  save.rs  tooth_measurement.rs
backend/tests/: cli.rs  contracts.rs  decode_helper_cli.rs  export_helper_cli.rs  parity.rs
frontend-app/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
(+395 files in other folders)
