[package]
# This crate owns DICOM decoding, preview generation, and processed output
# writing for both the CLI and the Tauri desktop shell.
name = "xrayview-backend"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dicom-core = "0.9"
dicom-dictionary-std = "0.9"
dicom-object = "0.9"
dicom-pixeldata = { version = "0.9", features = ["image"] }
# Preview export only needs PNG support, so keep the image feature set narrow.
image = { version = "0.25", default-features = false, features = ["png"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3.17"
