[package]
name = "xrayview-frontend-app"
version = "0.1.0"
description = "Tauri frontend shell for XRayView"
authors = ["OpenCode"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.2" }

[dependencies]
rfd = "0.15.2"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.1.1" }
tempfile = "3.14.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
