[package]
# This crate is the desktop windowing/process shell; the heavy imaging work
# stays in the sibling Rust backend so the UI layer stays thin.
name = "xrayview-frontend"
version = "0.2.2"
description = "Tauri frontend shell for XRayView"
authors = ["OpenCode"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
rfd = "0.15.2"
tauri = { version = "2.1.1", features = ["protocol-asset"] }
xrayview-backend = { path = "../../backend" }

[target.'cfg(target_os = "linux")'.dependencies]
glib = "0.18.5"

[features]
# Packaged builds serve frontend assets through Tauri's custom protocol.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
